# arrayfire-example

./: CMakeLists.txt  README.md
src/: examples.py  pcpca.cpp
